--- a/MDTSA.html
+++ b/MDTSA.html
@@ -97,7 +97,7 @@
           <!-- Page Title Content -->
           <div class="padded-vertical">
           	<span class="post-date-alt">22 May, 2014</span>
-            <h1 class="medium">Every Page?</h1>
+            <h1 class="medium">Multi-Dimensional Timeseries Analysis</h1>
             <div class="post-meta pull-left">
                 <span><i class="fa fa-comment"></i><a href="#">4 comments</a></span>
                 <span><i class="fa fa-tag"></i><a href="#">Webdesign</a></span>
