--- a/blog-page.html
+++ b/blog-page.html
@@ -318,7 +318,7 @@
                                 <p class="lead">Bamazon, the Amazon-like storefront which takes in orders from customers and deplete stock from the store's inventory.</p>
                                 <p>Bamazon can take in orders from customers and deplete stock from the store's inventory.
                                 </p>
-                                <a href="https://github.com/alexSamalot19/bamazon◊"
+                                <a href="https://github.com/alexSamalot19/bamazon"
                                     class="btn btn-primary btn-sm">GitHub Repo</a>
                             </div>
                         </div>
