--- a/index.html
+++ b/index.html
@@ -427,7 +427,28 @@
             </div>
           </div>
         </div>
+
+              <!-- Single Project -->
+              <div class="single-project animated fade-in appear-sixth">
+                <div class="project-image">
+                  <img src="https://i.imgur.com/WnCvQdb.gif" alt="" height="700px" width="700px" />
+                </div>
+                <div class="project-mask">
+                  <div class="project-info">
+                    <div class="project-title">Classic Burger</div>
+                    <div class="project-caption text-yellow">Node / Express / Sequilize</div>
+                    <div class="project-buttons"><a href="https://burger9.herokuapp.com/" target="_blank"
+                        class="btn btn-default btn-sm">Online version</a>
+                      <a href="https://github.com/alexSamalot19/Burger/" target="_blank"
+                        class="btn btn-default btn-sm">GitHub Repository</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
       </div>
+
+
   </div>
 
   <!-- Ajax Project Details -->
