--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </div>
                 <div class="project-mask">
                   <div class="project-info">
-                    <div class="project-title">Classic Burger</div>
+                    <div class="project-title">Classic Burgers</div>
                     <div class="project-caption text-yellow">Node / Express / Sequilize</div>
                     <div class="project-buttons"><a href="https://burger9.herokuapp.com/" target="_blank"
                         class="btn btn-default btn-sm">Online version</a>
