--- a/index.html
+++ b/index.html
@@ -431,16 +431,18 @@
               <!-- Single Project -->
               <div class="single-project animated fade-in appear-sixth">
                 <div class="project-image">
-                  <img src="https://i.imgur.com/WnCvQdb.gif" alt="" height="700px" width="700px" />
+                  <img src="https://media.gq.com/photos/59447d75165c2959e55471d0/master/pass/vegas-best-burgers.gif" alt="" height="700px" width="700px" />
                 </div>
                 <div class="project-mask">
                   <div class="project-info">
-                    <div class="project-title">Classic Burgers</div>
+                    <div class="project-title">Classic Burgers 2 Different Ways</div>
                     <div class="project-caption text-yellow">Node / Express / Sequilize</div>
-                    <div class="project-buttons"><a href="https://burger9.herokuapp.com/" target="_blank"
+                    <div class="project-buttons"><a href="https://alexsamalot19.github.io/DatabaseBurgerStart/" target="_blank"
                         class="btn btn-default btn-sm">Online version</a>
                       <a href="https://github.com/alexSamalot19/Burger/" target="_blank"
-                        class="btn btn-default btn-sm">GitHub Repository</a></div>
+                        class="btn btn-default btn-sm">mySQL GitHub Repository</a>
+                        <a href="https://github.com/alexSamalot19/sequelizedBurger/" target="_blank"
+                        class="btn btn-default btn-sm">Sequelize GitHub Repository</a></div>
                   </div>
                 </div>
               </div>
