added Groundz Project

--- a/index.html
+++ b/index.html
@@ -446,6 +446,29 @@
                   </div>
                 </div>
               </div>
+
+
+
+              <!-- Single Project -->
+              <div class="single-project animated fade-in appear-seventh">
+                <div class="project-image">
+                  <img src="images/320x120_horizontal_ground_logo_white-01.png" alt="" height="700px" width="700px" />
+                </div>
+                <div class="project-mask">
+                  <div class="project-info">
+                    <div class="project-title">Groundz</div>
+                    <div class="project-caption text-red">Node / Express / Sequilize</div>
+                    <div class="project-buttons"><a href="https://the-groundz.herokuapp.com/" target="_blank"
+                        class="btn btn-default btn-sm">Online version</a>
+                      <a href="https://github.com/alexSamalot19/full-stack/" target="_blank"
+                        class="btn btn-default btn-sm">GitHub Repository</a>
+                        </div>
+                  </div>
+                </div>
+              </div>
+
+
+
             </div>
 
       </div>
