adjusted button size for burger project

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                     <div class="project-buttons"><a href="https://alexsamalot19.github.io/DatabaseBurgerStart/" target="_blank"
                         class="btn btn-default btn-sm">Online version</a>
                       <a href="https://github.com/alexSamalot19/Burger/" target="_blank"
-                        class="btn btn-default btn-sm">mySQL GitHub Repository</a>
+                        class="btn btn-default btn-sm">mySQL GitHub Repo</a>
                         <a href="https://github.com/alexSamalot19/sequelizedBurger/" target="_blank"
-                        class="btn btn-default btn-sm">Sequelize GitHub Repository</a></div>
+                        class="btn btn-default btn-sm">Sequelize GitHub Repo</a></div>
                   </div>
                 </div>
               </div>
