--- a/GeoPy.html
+++ b/GeoPy.html
@@ -129,7 +129,7 @@
                     
                     <div class="row">
                         <div id="markdownDiv">
-                            <pre class="prettyprint lang-lang-tex">                                
+                            <pre class="prettyprint lang-tex">                                
                                 \documentclass{article}
                                 \usepackage{amsmath}
                                 
