added click game

--- a/index.html
+++ b/index.html
@@ -469,6 +469,44 @@
         </div>
 
 
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-eighth">
+          <div class="project-image">
+            <img src="https://cdn140.picsart.com/305275885013201.gif?r1024x1024" alt="" height="700px" width="700px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">News Scraper</div>
+              <div class="project-caption text-red"> Node / Express / Mongo db</div>
+              <div class="project-buttons"><a href=" https://news-scrape9.herokuapp.com/" target="_blank"
+                  class="btn btn-default btn-sm">Online version</a>
+                <a href="https://github.com/alexSamalot19/Mongo-News-Scrape" target="_blank"
+                  class="btn btn-default btn-sm">GitHub Repository</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Single Project -->
+        <div class="single-project animated fade-in appear-ninth">
+          <div class="project-image">
+            <img src="https://thumbs.gfycat.com/SimilarTenderBichonfrise-small.gif" alt="" height="700px" width="700px" />
+          </div>
+          <div class="project-mask">
+            <div class="project-info">
+              <div class="project-title">Click Game</div>
+              <div class="project-caption text-red"> Node / Express / ReactJS</div>
+              <div class="project-buttons"><a href="https://click-game9.herokuapp.com/" target="_blank"
+                  class="btn btn-default btn-sm">Online version</a>
+                <a href="https://github.com/alexSamalot19/Click-Game" target="_blank"
+                  class="btn btn-default btn-sm">GitHub Repository</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 
         <!-- Ajax Project Details -->
         <div class="project-content"></div>
