updated to reflect style changes in click game

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <!-- Single Project -->
         <div class="single-project animated fade-in appear-ninth">
           <div class="project-image">
-            <img src="https://thumbs.gfycat.com/SimilarTenderBichonfrise-small.gif" alt="" height="700px" width="700px" />
+            <img src="https://media3.giphy.com/media/24G0F8lQWYMb6jD47X/source.gif" alt="" height="700px" width="700px" />
           </div>
           <div class="project-mask">
             <div class="project-info">
