--- a/index.html
+++ b/index.html
@@ -506,6 +506,23 @@
           </div>
         </div>
 
+                <!-- Single Project -->
+                <div class="single-project animated fade-in appear-tenth">
+                  <div class="project-image">
+                    <img src="https://media3.giphy.com/media/Ghw8BX03RxZM4/giphy.gif?cid=790b7611a5f3144363257b37128217ec70c0adece8d60575&rid=giphy.gif" alt="" height="700px" width="700px" />
+                  </div>
+                  <div class="project-mask">
+                    <div class="project-info">
+                      <div class="project-title">Google React Books</div>
+                      <div class="project-caption text-red"> MongoDB / Node / Express / ReactJS</div>
+                      <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
+                          class="btn btn-default btn-sm">Online version</a>
+                        <a href="https://github.com/alexSamalot19/Google-Books-React" target="_blank"
+                          class="btn btn-default btn-sm">GitHub Repository</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
 
         <!-- Ajax Project Details -->
