added recent projects that have basic functionallity but have not been cleaned up or deployed

--- a/index.html
+++ b/index.html
@@ -524,7 +524,43 @@
                   </div>
                 </div>
 
+                                <!-- Single Project -->
+                                <div class="single-project animated fade-in appear-eleventh">
+                                  <div class="project-image">
+                                    <img src="images/NavBkgd.gif" alt="" height="700px" width="700px" />
+                                  </div>
+                                  <div class="project-mask">
+                                    <div class="project-info">
+                                      <div class="project-title">Back Track</div>
+                                      <div class="project-caption text-red"> MongoDB / Node / Express / ReactJS</div>
+                                      <h3>Under Construction</h3>
+                                      <!-- <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
+                                          class="btn btn-default btn-sm">Online version</a> -->
+                                        <a href="https://github.com/alexSamalot19/Back-Track-App" target="_blank"
+                                          class="btn btn-default btn-sm">GitHub Repository</a>
+                                      </div>
+                                    </div>
+                                  </div>
+                              
 
+                                <!-- Single Project -->
+                                <div class="single-project animated fade-in appear-twelfth">
+                                  <div class="project-image">
+                                    <img src="images/springReact.jpg" alt="" height="700px" width="700px" />
+                                  </div>
+                                  <div class="project-mask">
+                                    <div class="project-info">
+                                      <div class="project-title">Admin App</div>
+                                      <div class="project-caption text-red"> Java / Spring Boot / JavaScript / ReactJS</div>
+                                      <h3>Under Construction</h3>
+                                      <!-- <div class="project-buttons"><a href="https://google-react-b00k.herokuapp.com/" target="_blank"
+                                          class="btn btn-default btn-sm">Online version</a> -->
+                                        <a href="https://github.com/alexSamalot19/SpringJavaAdminApp" target="_blank"
+                                          class="btn btn-default btn-sm">GitHub Repository</a>
+                                      </div>
+                                    </div>
+                                  </div>
+                                
         <!-- Ajax Project Details -->
         <div class="project-content"></div>
 
