imporoved writing structure

--- a/OOPblog.html
+++ b/OOPblog.html
@@ -150,25 +150,41 @@
       <div class="container content">
         <div class="row">
           <div class="col-lg-12">
-            <p class="lead">
-              Encapsulation, Abstraction, Inheritance and Polymorphism After
-              Years of Evaluating Mathematical Functions
-            </p>
             <p>
               I signed up for a Full Stack bootcamp to combine a few interests
-              of mine, visual design, data analytics and modern coding
-              practices. In order for a web application to balance the user
+              of mine: visual design, data analytics and modern coding
+              practices. In order for web applications to balance the user
               interface with thte server and database in a compeditive manner,
-              not only does the software and hardware improve rapidy but so does
-              the way code is styled. Object Oriented Programming (OOP) is a
-              style of coding I have been exposed to before my bootcamp, but it
-              has become essential over the course of learning Full Stack
-              Development.
+              related software and hardware has improved rapidy. Object Oriented
+              Programming (OOP) is a style of coding essential to web design and
+              increasing my use of this style has been an essential development
+              as someone who writes code.
             </p>
-            <h3>The Four Pillars of OOP</h3>
             <p>
-              OOP can be broken into four major principles that reduce
-              interdependency and declutter code.
+              My first real coding project was my B.S. Thesis where I ran a
+              simple time series algorithm and I have been hooked ever since. At
+              the time I thought it would be a stand alone project and little
+              did I know I would be adapting the methodology through an M.S.
+              Thesis and a publication. By the end I was guilty of separating
+              data and functions with heavy reuse of similar interrelated
+              functions with quite a bit of interdependency.
+            </p>
+            <p class="lead">
+              OOP takes out the uneccessary interdependency with four major
+              principles, Encapsulation Abstraction, Inheritance and
+              Polymorphism.
+            </p>
+            <p>
+              OOP combines a group of related variables and functions into
+              objects with properites and methods.
+            </p>
+
+            <p class="lead">
+              Encapsulation
+            </p>
+            <p>
+              Reduces parameters and makes it easier to use and maintain the
+              function
             </p>
 
             <div class="row">
