--- a/OOPblog.html
+++ b/OOPblog.html
@@ -153,21 +153,22 @@
             <p>
               I signed up for a Full Stack bootcamp to combine a few interests
               of mine: visual design, data analytics and modern coding
-              practices. In order for web applications to balance the user
-              interface with thte server and database in a compeditive manner,
-              related software and hardware has improved rapidy. Object Oriented
-              Programming (OOP) is a style of coding essential to web design and
-              increasing my use of this style has been an essential development
-              as someone who writes code.
+              practices. Web applications connect the user interface with the
+              server and database using software and hardware that is constantly
+              evolving. Object Oriented Programming (OOP) is a style of coding
+              essential to web design and unlike coding languages it has
+              remained a staple of this field. Increasing my use of this style
+              of programming has been an essential development as someone who
+              writes code.
             </p>
             <p>
-              My first real coding project was my B.S. Thesis where I ran a
-              simple time series algorithm and I have been hooked ever since. At
-              the time I thought it would be a stand alone project and little
-              did I know I would be adapting the methodology through an M.S.
-              Thesis and a publication. By the end I was guilty of separating
-              data and functions with heavy reuse of similar interrelated
-              functions with quite a bit of interdependency.
+              My first exposure to software development was my B.S. Thesis where
+              I ran a simple time series algorithm. I have been hooked ever
+              since. At the time I thought it would be a stand alone project. I
+              had no idea at the time I would be adapting the methodology
+              through an M.S. Thesis and a publication. By the end I was guilty
+              of separating data and functions with heavy reuse of similar
+              interrelated functions with quite a bit of interdependency.
             </p>
             <p class="lead">
               OOP takes out the uneccessary interdependency with four major
