--- a/OOPblog.html
+++ b/OOPblog.html
@@ -134,7 +134,8 @@
           <div class="padded-vertical">
             <span class="post-date-alt">15 January, 2020</span>
             <h1 class="medium">
-              Object Oriented Programming Afther the Functional Years
+              Object Oriented Programming After a Few Years Writing Functional
+              Code
             </h1>
             <div class="post-meta pull-left">
               <span
