bare bones blog

--- a/OOPblog.html
+++ b/OOPblog.html
@@ -153,42 +153,66 @@
           <div class="col-lg-12">
             <p>
               I signed up for a Full Stack bootcamp to combine a few interests
-              of mine: visual design, data analytics and modern coding
-              practices. Web applications connect the user interface with the
-              server and database using software and hardware that is constantly
-              evolving. Object Oriented Programming (OOP) is a style of coding
-              essential to web design and unlike coding languages it has
-              remained a staple of this field. Increasing my use of this style
+              of mine: visual design, data analysis and modern coding practices.
+              Web applications connect the user interface with the server and
+              database using software and hardware that is constantly evolving.
+              Object Oriented Programming (OOP) is a style of coding essential
+              to web development and has been passed on to many of the languages
+              and tools essencial to the field. Increasing my use of this style
               of programming has been an essential development as someone who
-              writes code.
-            </p>
-            <p>
-              My first exposure to software development was my B.S. Thesis where
-              I ran a simple time series algorithm. I have been hooked ever
-              since. At the time I thought it would be a stand alone project. I
-              had no idea at the time I would be adapting the methodology
-              through an M.S. Thesis and a publication. By the end I was guilty
-              of separating data and functions with heavy reuse of similar
+              writes code. My first exposure to software development was
+              evaluating mathematical functions. My B.S. Thesis was a simple
+              time series algorithm and I have been hooked on writing code ever
+              since. At the time I expected it would be a stand alone project. I
+              had no idea I would be adapting the methodology through an M.S.
+              Thesis and a publication. Self admittadley I was guilty of
+              separating realted data and functions with reuse of similar
               interrelated functions with quite a bit of interdependency.
+              Learning Full Stack Development has enhanced my use of OOP to
+              improve the clarity and reusibility of my code.
             </p>
             <p class="lead">
               OOP takes out the uneccessary interdependency with four major
               principles, Encapsulation Abstraction, Inheritance and
               Polymorphism.
             </p>
-            <p>
-              OOP combines a group of related variables and functions into
-              objects with properites and methods.
-            </p>
-
+            <br />
             <p class="lead">
               Encapsulation
             </p>
             <p>
-              Reduces parameters and makes it easier to use and maintain the
-              function
+              OOP combines a group of related variables and functions into
+              objects with properites and methods. This reduces parameters and
+              makes it easier to use and maintain the function and revise the
+              code later on.
             </p>
-
+            <p class="lead">
+              Abstraction
+            </p>
+            <p>
+              Abstraction is a great tool to reduce interaction with the number
+              of properties and methods. This makes a simpler user interface and
+              reduces the impact of change.
+            </p>
+            <p class="lead">
+              Inheritance
+            </p>
+            <p>
+              Inheritance is a mechanism in which one class aquires the property
+              of another class. This eliminates redundent code between different
+              objects.
+            </p>
+            <p class="lead">
+              Polymorphism
+            </p>
+            <p>
+              Polymorphism is a technique for getting rid of the long
+              conditional statements associated with reusing functions. A
+              methodologycan be used in each object with differences handled in
+              other parts of the function rather than each set of options being
+              handled all in the same function.
+            </p>
+            <!-- 
             <div class="row">
               <div id="markdownDiv">
                 <pre class="prettyprint lang-MATLAB">
@@ -197,7 +221,22 @@
                     </pre
                 >
               </div>
-            </div>
+            </div> -->
+            <p class="lead">
+              OOP Provides Web Developers a Program Paradigm Which Cleans up
+              Collaboration
+            </p>
+            <p>
+              I do not necessarily believe that there is one correct style of
+              writing code or even that my approach was incorrect when writing
+              my procedure for my research. However, now that I have written
+              enough OOP code I cannot unsee it and how its use could of
+              benefitted such a large project. The constraints of determining a
+              new and improved way to apply statsitical models requires rapid
+              adaptation. Taking time to stop and focus on the craft of writing
+              code has been rewarding for myself (and anyone looking to read or
+              reuse my codes).
+            </p>
           </div>
         </div>
 
