spelling in OOP Blog

--- a/OOPblog.html
+++ b/OOPblog.html
@@ -165,14 +165,14 @@
               time series algorithm and I have been hooked on writing code ever
               since. At the time I expected it would be a stand alone project. I
               had no idea I would be adapting the methodology through an M.S.
-              Thesis and a publication. Self admittadley I was guilty of
-              separating realted data and functions with reuse of similar
+              Thesis and a publication. Self admittedly I was guilty of
+              separating related data and functions with reuse of similar
               interrelated functions with quite a bit of interdependency.
               Learning Full Stack Development has enhanced my use of OOP to
-              improve the clarity and reusibility of my code.
+              improve the clarity and reusability of my code.
             </p>
             <p class="lead">
-              OOP takes out the uneccessary interdependency with four major
+              OOP takes out the unnecessary interdependency with four major
               principles, Encapsulation Abstraction, Inheritance and
               Polymorphism.
             </p>
@@ -182,7 +182,7 @@
             </p>
             <p>
               OOP combines groups of related variables and functions into
-              objects with properites and methods. This reduces parameters and
+              objects with properties and methods. This reduces parameters and
               makes it easier to use and maintain the function. The coding
               sample below shows an example of functional programming in
               JavaScript. The variables are declared and passed into the
@@ -204,8 +204,8 @@
             <p>
               The variables and the functions are decoupled. If someone was to
               make revisions to the code the relationships would be less clear
-              than if the paramaters were modled as properties of an object.
-              This further improves orgainization when the amount of properties
+              than if the parameters were modeled as properties of an object.
+              This further improves organization when the amount of properties
               and methods increase.
             </p>
             <div class="row">
@@ -228,7 +228,7 @@
             </p>
             <p>
               Abstraction is separating properties and methods from the outside
-              code. Using a private method can elimainate changes to unrelated
+              code. Using a private method can eliminate changes to unrelated
               data. It is also easier to understand an object with a few
               properties than an object with a lot of properties and methods.
               Abstraction helps create a simpler user interface and reduces the
@@ -238,12 +238,12 @@
               Inheritance
             </p>
             <p>
-              Inheritance is a mechanism in which one class aquires the property
-              of another class. This eliminates redundent code between different
-              classes. New classes can be made based on other classes. An
-              example is child classes can be made to inherit the data and code
-              features of their parent class. Functionality common to all the
-              object types can be reused eliminating redundant code.
+              Inheritance is a mechanism in which one class acquires the
+              property of another class. This eliminates redundant code between
+              different classes. New classes can be made based on other classes.
+              An example is child classes can be made to inherit the data and
+              code features of their parent class. Functionality common to all
+              the object types can be reused eliminating redundant code.
             </p>
             <p class="lead">
               Polymorphism
@@ -261,11 +261,14 @@
             <p>
               I do not necessarily believe that there is one correct style of
               writing code or even that my approach was incorrect when writing
-              my procedure for my research. However, now that I have written
+              the procedure for my research. However, now that I have written
               enough OOP code I can tell my transition to web development will
-              be heavy with OOP. Taking time to attend (graduate soon) from a
-              Full Stack Bootcamp has been rewarding for myself (and anyone
-              looking to read or reuse my codes).
+              be heavy with OOP. Taking time to attend a Full Stack Bootcamp has
+              been rewarding for myself (and anyone looking to read or reuse my
+              codes). OOP is very large subject and this brief blog post has
+              only covered the four most fundamental principles. I would
+              encourage anyone interested to go much deeper into the topic in
+              their language of choice.
             </p>
           </div>
         </div>
