OOP blog JS example

--- a/OOPblog.html
+++ b/OOPblog.html
@@ -197,7 +197,7 @@
             let monthsOfOwnership = 120;
 
             funciton getTransportationCost(price, maintanencePerMonth, gasPerMonth, monthsOfOwnership) {
-                return Price + ((maintenancePerMonth + gasPerMonth) * monthsOfOwnership);
+                return price + ((maintenancePerMonth + gasPerMonth) * monthsOfOwnership);
             }
                   </pre
               >
