--- a/OOPblog.html
+++ b/OOPblog.html
@@ -145,12 +145,12 @@
               Object Oriented Programming After a Few Years Writing Functional
               Code
             </h1>
-            <div class="post-meta pull-left">
+            <!-- <div class="post-meta pull-left">
               <span
                 ><i class="fa fa-comment"></i><a href="#">4 comments</a></span
               >
               <span><i class="fa fa-tag"></i><a href="#">Webdesign</a></span>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
