removed buttons to incomplete pages

--- a/blog-page.html
+++ b/blog-page.html
@@ -157,7 +157,7 @@
               <h1 class="medium">
                 <a href="single-post.html">Full Stack Experience </a>
               </h1>
-              <a href="single-post.html" class="btn btn-primary">Read more</a>
+              <!-- <a href="single-post.html" class="btn btn-primary">Read more</a> -->
             </div>
           </article>
 
@@ -174,7 +174,7 @@
                   >Engineering and Data Analysis</a
                 >
               </h1>
-              <a href="single-post.html" class="btn btn-primary">Read more</a>
+              <!-- <a href="single-post.html" class="btn btn-primary">Read more</a> -->
             </div>
           </article>
         </div>
