--- a/OOPblog.html
+++ b/OOPblog.html
@@ -253,10 +253,10 @@
             <p>
               Inheritance is a mechanism in which one class acquires the
               property of another class. This eliminates redundant code between
-              different classes. New classes can be made based on other classes.
-              An example is child classes can be made to inherit the data and
-              code features of their parent class. Functionality common to all
-              the object types can be reused eliminating redundant code.
+              different classes. A popular use of inheritance is child classes,
+              which can be made to inherit the data and code features of their
+              parent class. Functionality common to all the object types can be
+              reused eliminating redundant code.
             </p>
             <p class="lead">
               Polymorphism
