--- a/OOPblog.html
+++ b/OOPblog.html
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="col-lg-12">
             <p>
-              I signed up for a Full Stack bootcamp to combine a few interests
+              I signed up for a full stack bootcamp to combine a few interests
               of mine: visual design, data analysis and modern coding practices.
               Web applications connect the user interface with the server and
               database using software and hardware that is constantly evolving.
@@ -276,7 +276,7 @@
               writing code or even that my approach was incorrect when writing
               the procedure for my research. Now that I have written enough OOP
               code I can tell my transition to web development will be heavy
-              with OOP. Taking time to attend a Full Stack Bootcamp has been
+              with OOP. Taking time to attend a full stack bootcamp has been
               rewarding for myself (and anyone looking to read or reuse my
               codes). OOP is very large subject and this brief blog post has
               only covered the four most fundamental principles at the surface
