--- a/MERNblog.html
+++ b/MERNblog.html
@@ -120,10 +120,10 @@
       <div class="page-title bottom-padded black">
         <!-- Page Title Background -->
         <div class="page-title-bg editable-alpha" data-alpha="20">
-          <!-- <img
-            src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto/gigs/126079679/original/d1ec2f1b70f06ec4c6b721f7cecb3b189f0b8923/mern-stack-app-development.jpeg"
+          <img
+            src="https://i.morioh.com/803a53d7bb.png"
             alt=""
-          /> -->
+          />
         </div>
 
         <div class="content padded dark">
